ZFIN_8279 add references and is_extinct boolean to allele LinkML submission file